# rf-nautilus

./: .gitignore  .gitmodules  CMakeLists.txt  FileDialog.qml  Main.qml  README.md  README.txt  TestUsbFileDialog.qml  UsbFileDialog.qml
qml/: FileDialog.qml  FileListView.qml  Sidebar.qml  main.qml
qml/components/: FileItem.qml  FolderItem.qml
src/: filemodel.cpp  filemodel.h  main.cpp  qml.qrc
